# poke

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/: launch.json
.github/instructions/: poke-memory.instructions.md
.github/workflows/: ci.yml  pages.yml
data/offline/: evolution_10.json  pokemon_pikachu.json  species_25.json  species_db.json
docs/: build-tradeoffs.md
docs/plans/: 2026-07-19-dexter-voice-design.md
fixtures/: expected.json
poke/: __init__.py  __main__.py  api_client.py  capture.py  config.py  entry.py  gpio_input.py  identify.py  match.py  ocr.py  offline_db.py  pronunciations.py  tts.py  tts_text.py  ui.py
scripts/: audition-voice.py  build-offline-db.py  build-pronunciations.py  build-sprites.py  build-voice-clips.py  serve-web.sh
tests/: test_aliases.py  test_build_offline_db.py  test_entry.py  test_match.py  test_ocr_fixture.py  test_offline_db.py  test_tts_text.py  test_voice_clips.py
web/: index.html  jsconfig.json
web/css/: app.css
web/data/: species_names.json
web/data/audio/: manifest.json
web/data/offline/: species_db.json
web/js/: api.js  app.js  entry.js  globals.d.ts  machine.js  match.js  ocr.js  tts.js
